codepkg/objects/Reimbursement__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Reimbursements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Local Agency Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attachment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>F_42__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>F-42</label>
        <referenceTo>F42__c</referenceTo>
        <relationshipName>Reimbursements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incident_Order_Number__c</fullName>
        <formula>Incident__r.Order_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incident Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Request_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Incident Request Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident</label>
        <referenceTo>Incident__c</referenceTo>
        <relationshipName>Reimbursements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lodging_Total_Rollup__c</fullName>
        <label>Lodging Total Rollup</label>
        <summarizedField>Reimbursement_Line_Item__c.Lodging__c</summarizedField>
        <summaryForeignKey>Reimbursement_Line_Item__c.Reimbursement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lodging_Total__c</fullName>
        <label>Lodging Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MACIDs__c</fullName>
        <formula>Account__r.MACS_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MACIDs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MISC_Total_Rollup__c</fullName>
        <label>MISC Total Rollup</label>
        <summarizedField>Reimbursement_Line_Item__c.MISC__c</summarizedField>
        <summaryForeignKey>Reimbursement_Line_Item__c.Reimbursement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MISC_Total__c</fullName>
        <label>MISC Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meal_Total_Rollup__c</fullName>
        <label>Meal Total Rollup</label>
        <summarizedField>Reimbursement_Line_Item__c.Meal__c</summarizedField>
        <summaryForeignKey>Reimbursement_Line_Item__c.Reimbursement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Meal_Total__c</fullName>
        <label>Meal Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mutual_Aid_Staff_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mutual Aid Staff Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Printed_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Printed Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agency Review</fullName>
                </value>
                <value>
                    <fullName>CALOES Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strike_Team__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>STRIKE TEAM / TASK FORCE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Reimbursement_Amount_Rollup__c</fullName>
        <label>Total Reimbursement Amount Rollup</label>
        <summarizedField>Reimbursement_Line_Item__c.Tot_Amount__c</summarizedField>
        <summaryForeignKey>Reimbursement_Line_Item__c.Reimbursement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Reimbursement_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Unit Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Expense Claim</label>
    <listViews>
        <fullName>Agency_Review</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Incident__c</columns>
        <columns>F_42__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Agency Review</value>
        </filters>
        <label>Agency Review</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Incident__c</columns>
        <columns>F_42__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approved</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Incident__c</columns>
        <columns>F_42__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved</label>
    </listViews>
    <listViews>
        <fullName>CALOES_Review</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Incident__c</columns>
        <columns>F_42__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>CALOES Review</value>
        </filters>
        <label>CALOES Review</label>
    </listViews>
    <nameField>
        <displayFormat>EC-{00000000}</displayFormat>
        <label>Reimbursement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>